SignUp-Page implemented (in analyse-phase), SignUpForm-Page implemented (in analyse-phase), Login-Page implemented (in analyse-phase), homepage(not-signedin) (in implementation), Page Structure implemented (in analyse-phase)

--- a/components/pages/SignupForm.module.css
+++ b/components/pages/SignupForm.module.css
@@ -54,12 +54,12 @@
     font-size: 36px;
     font-weight: 500;
     text-shadow: 0px 1px 20px#000;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 .button{
     position: relative;
-    height: 80px;
+    height: 60px;
     border-radius: 25px;
     color: #fff;
     font-size: 30px;
@@ -68,15 +68,42 @@
     justify-content: center;
     padding: 10px 20px;
     font-weight: bold;
-    min-width: 250px;
+    min-width: 300px;
     background-color: var(--button-bg);
     cursor: pointer;
     transition: all .2s ease-out;
+    outline: none;
+    border: none;
+    line-height: 60px;
 }
 
 .button:hover{
     box-shadow: 0 4px 10px #333;
+    min-width: 350px;
+}
+
+.button:disabled:hover{
     min-width: 300px;
+    max-width: 300px;
+    box-shadow: none;
+}
+
+.selectinput{
+    height: 40px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+    min-width: 300px;
+    max-width: 300px;
+    border-radius: 3px;
+    font-size: 17px;
+    color: rgba(0, 0, 0, 0.6);
+    padding-left: 6px;
+    cursor: pointer;
+}
+
+.option{
+    opacity: 0.7;
 }
 
 .or{
@@ -98,10 +125,64 @@
     cursor: pointer;
 }
 
+.input{
+    height: 40px;
+    min-width: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+    padding-left: 10px;
+    font-size: 17px;
+    margin-bottom: 15px;
+    border-radius: 3px;
+}
+
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.relative{
+    position: relative;
+    max-width: 300px;
+}
+
+.error{
+    position: absolute;
+    bottom: 2px;
+    font-size: 14px;
+    color: red;
+}
+
 .reserveleft{
     height: 100px;
     width: 100%;
     background-color: var(--theme-color);
+}
+
+.check{
+    display: flex;
+    max-width: 300px;
+    justify-content: space-between;
+}
+
+.checkbox{
+    width: 20px;
+    height: 20px;
+}
+
+.link{
+    color: #00718F;
+}
+
+.link:hover{
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 @media (max-width: 980px){
