--- a/components/ui/Header.module.css
+++ b/components/ui/Header.module.css
@@ -1,6 +1,49 @@
 .container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    color: #fff;
+}
+
+.header{
     height: 60px;
     width: 100%;
     background-color: #344E41;
-    border-radius: 25px;
+    border-radius: 30px;
+    margin: 0 5px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    align-items: center;
+}
+
+.logo{
+    width: 200px;
+}
+
+.signfield{
+    display: flex;
+}
+
+.sign{
+    width: 200px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    margin-left: 20px;
+    border-radius: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    line-height: 40px;
+    transition: all .2s ease-in;
+    opacity: 0.8;
+}
+
+.sign:hover{
+    opacity: 0.4;
 }
