--- a/components/pages/Login.module.css
+++ b/components/pages/Login.module.css
@@ -53,13 +53,13 @@
     align-items: center;
     font-size: 36px;
     font-weight: 500;
-    text-shadow: 0px 1px 20px#000;
-    margin-bottom: 60px;
+    text-shadow: 0px 5px 6px#000;
+    margin-bottom: 40px;
 }
 
 .button{
     position: relative;
-    height: 80px;
+    height: 60px;
     border-radius: 25px;
     color: #fff;
     font-size: 30px;
@@ -68,16 +68,27 @@
     justify-content: center;
     padding: 10px 20px;
     font-weight: bold;
-    min-width: 250px;
+    min-width: 300px;
     background-color: var(--button-bg);
     cursor: pointer;
     transition: all .2s ease-out;
+    outline: none;
+    border: none;
+    line-height: 60px;
+    margin-top: 0;
 }
 
 .button:hover{
     box-shadow: 0 4px 10px #333;
-    min-width: 300px;
+    min-width: 350px;
 }
+
+.button:disabled:hover{
+    min-width: 300px;
+    max-width: 300px;
+    box-shadow: none;
+}
+
 
 .or{
     color: #424242;
@@ -96,6 +107,41 @@
 .underline:hover{
     text-decoration: underline;
     cursor: pointer;
+}
+
+.input{
+    height: 40px;
+    min-width: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+    padding-left: 10px;
+    font-size: 17px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+}
+
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.relative{
+    position: relative;
+}
+
+.error{
+    position: absolute;
+    top: -20px;
+    color: red;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
 }
 
 .reserveleft{
