--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 html,
 body {
   padding: 0;
@@ -29,4 +31,10 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+:root{
+  --text-color: #000;
+  --theme-color: #226F54;
+  --button-bg: #87C38F;
 }
