SlugJs-Problem fixed; Signup-Page optimized; Header optimized; SettingsPage halfimplemented; Chat-Page created

--- a/components/ui/Header.module.css
+++ b/components/ui/Header.module.css
@@ -1,18 +1,19 @@
 .container{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 5px;
     color: #fff;
+    box-shadow: 2px 2px 2px #000;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 .header{
-    height: 60px;
+    height: 80px;
     width: 100%;
-    background-color: #344E41;
-    border-radius: 30px;
-    margin: 0 5px;
-    padding: 0 20px;
+    background-color: #226F54;
+    padding: 0 5px;
     display: flex;
     justify-content: space-between;
     font-size: 20px;
@@ -20,30 +21,193 @@
 }
 
 .logo{
-    width: 200px;
+    width: 250px;
+    cursor: pointer;
 }
 
-.signfield{
+.menu_btn{
+    display: none;
+}
+
+.links{
     display: flex;
+    width: 40%;
+    justify-content: space-between;
 }
 
-.sign{
-    width: 200px;
-    height: 40px;
+.self_svg{
+    position: relative;
+    height: 50px;
+    width: 50px;
+    color: hsl(0, 0%, 100%);
+    left: -18px;
+    transition: all .2s ease-in;
+}
+
+._text{
+    position: relative;
+    right: -18px;
+    transition: all .1s ease-in;
+}
+
+.column{
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    color: #000;
-    margin-left: 20px;
-    border-radius: 20px;
-    font-weight: 600;
     cursor: pointer;
-    line-height: 40px;
-    transition: all .2s ease-in;
-    opacity: 0.8;
 }
 
-.sign:hover{
-    opacity: 0.4;
+.column:hover ._text{
+    right: 0;
+}
+
+.column:hover .self_svg{
+    left: 0px;
+}
+
+.account{
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    background-color: gainsboro;
+    border-radius: 999px;
+}
+
+.account_name{
+    margin-right: 10px;
+}
+
+.column:hover .account_name{
+    text-decoration: underline;
+}
+
+.menu{
+    display: none;
+}
+
+.closed{
+    display: none;
+}
+
+@media (max-width: 1300px){
+    .links{
+        width: 50%;
+    }
+}
+
+@media(max-width: 1000px){
+
+
+    .links{
+        display: none;
+    }
+
+    .menu_btn{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+        transition: all .5s ease-in-out;
+    }
+    
+    .menu_btn_burger{
+        width: 40px;
+        height: 6px;
+        background-color: #fff;
+        border-radius: 5px;
+        transition: all .5s ease-in-out;
+    }
+
+    .menu_btn_burger::after,
+    .menu_btn_burger::before{
+        content: '';
+        position: absolute;
+        width: 40px;
+        height: 6px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
+        transition: all .3s ease-in-out;
+    }
+
+    .menu_btn_burger::after{
+        transform: translateY(16px);
+    }
+
+    .menu_btn_burger::before{
+        transform: translateY(-16px);
+    }
+
+    .menu_btn.open .menu_btn_burger{
+        transform: translateX(-50px);
+        background: transparent;
+        box-shadow: none;
+    }   
+
+    .menu_btn.open .menu_btn_burger::before{
+        transform: rotate(45deg) translate(35px, -35px);
+    }
+
+    .menu_btn.open .menu_btn_burger::after{
+        transform: rotate(-45deg) translate(35px, 35px);
+    }
+
+    .closed{
+        display: none;
+    }
+
+    .openMenu{
+        margin: 0;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .menu_container{
+        position: absolute;
+        background-color: #226F54;
+        width: 40%;
+        border-radius: 0 0 0 20px;
+    }
+
+    .list_item_1{
+        border-bottom: 1px solid #146146;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .list_item_2{
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .column{
+        margin-right: 10px;
+    }
+
+    .self_svg{
+        position: relative;
+        height: 50px;
+        width: 50px;
+        color: hsl(0, 0%, 100%);
+        left: 0px;
+        transition: all .2s ease-in;
+    }
+    
+    ._text{
+        position: relative;
+        right: 5px;
+        transition: all .1s ease-in;
+    }
+
+    .column:hover ._text{
+        right: 10px;
+    }
+    
+    .column:hover .self_svg{
+        left: 0px;
+    }
+
+
 }
