--- a/components/pages/Homepage.module.css
+++ b/components/pages/Homepage.module.css
@@ -1,4 +1,152 @@
 .container{
     margin: 0;
     padding: 0;
+    font-family: 'Lora', serif;
+    background-color: #E8E8E8;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+.bg_pic{
+    width: 100%;
+    user-select: none;
+}
+
+.pic{
+    opacity: 80%;
+    width: 100%;
+    position: relative;
+}
+
+.textcontainer{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20%;
+    text-align: center;
+    font-size: 40px;
+    color: #fff;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.linkbutton{
+    width: 300px;
+    background-color: rgba(217, 217, 217, 0.5);
+    border: 1px solid #FFFFFF;
+    font-size: 40px;
+    align-self: center;
+    margin-top: 10px;
+    transition: all .2s ease-in;
+}
+
+.linkbutton:hover{
+    background-color: #fff;
+    color: #2F6248;
+}
+
+.contentcontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 10px;
+
+}
+
+.contentheading{
+    font-size: 52px;
+    font-weight: bold;
+
+}
+
+.contentparagraph{
+    font-size: 20px;
+    max-width: 600px;
+}
+
+.contentbutton{
+    width: 300px;
+    height: 50px;
+    line-height: 50px;
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+    margin-top: 10px;
+    font-size: 32px;
+    cursor: pointer;
+    transition: all .2s ease-in;
+}
+
+.contentbutton:hover{
+    background-color: #2F6248;
+}
+
+.contentrow{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+}
+
+.content{
+    position: relative;
+    height: 400px;
+    display: flex;
+    max-width: 50%;
+    margin-bottom: 20px;
+    background-color: #fff;
+}
+
+.leftcontent{
+    width: 50%;
+    overflow: hidden;
+}
+
+.rightcontent{
+    width: 50%;
+    overflow: hidden;
+}
+
+.text{
+    padding: 20px;
+    text-align: center;
+}
+
+.small_heading{
+    font-weight: bold;
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+.small_text{
+    font-size: 25px;
+}
+
+.endcontainer{
+    text-align: center;
+}
+
+.endtext{
+    font-size: 32px;
+    width: 300px;
+}
+
+.endbutton{
+    width: 300px;
+    font-size: 20px;
+    background-color: rgba(217, 217, 217, 20%);
+    border: 1px solid #000;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 40px;
+    margin-bottom: 60px;
+    margin-top: 20px;
 }
