--- a/components/pages/SignupForm.module.css
+++ b/components/pages/SignupForm.module.css
@@ -185,6 +185,140 @@
     text-decoration: underline;
 }
 
+.c_container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.c_logo{
+    position: absolute;
+    left: 20px;
+    top: 10px;
+    width: 300px;
+}
+
+.c_left{
+    width: 55%;
+    height: 100vh;
+    background-color: var(--theme-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.c_right{
+    width: 45%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.c_heading{
+    color: #fff;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.c_description{
+    color: #fff;
+    font-size: 50px;
+}
+
+.c_paw{
+    margin-top: 20px;
+}
+
+.c_signupas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 36px;
+    font-weight: 500;
+    text-shadow: 0px 1px 20px#000;
+    margin-bottom: 60px;
+}
+
+.c_button{
+    position: relative;
+    height: 80px;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    font-weight: bold;
+    min-width: 250px;
+    background-color: var(--button-bg);
+    cursor: pointer;
+    transition: all .2s ease-out;
+}
+
+.c_button:hover{
+    box-shadow: 0 4px 10px #333;
+    min-width: 300px;
+}
+
+.c_or{
+    color: #424242;
+    font-size: 20px;
+    opacity: 70%;
+    font-weight: bold;
+    margin: 20px 0;
+}
+
+.c_existingacc{
+    margin-top: 10px;
+    color: #000;
+    font-weight: bold;
+}
+
+.c_underline:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+@media (max-width: 980px){
+    .c_container{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .c_left{
+        width: 100%;
+        height: 100%;
+        padding-bottom: 30px;
+    }
+
+    .c_right{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .c_signupas{
+        margin-top: 40px;
+    }
+
+    .c_reserveleft{
+        height: 100px;
+        width: 100%;
+        background-color: var(--theme-color);
+    }
+
+    .c_left{
+        display: none;
+    }
+}
+
 @media (max-width: 980px){
     .container{
         flex-direction: column;
