--- a/components/pages/ChatPage.module.css
+++ b/components/pages/ChatPage.module.css
@@ -1,50 +1,10 @@
-.content{
-    padding: 20px;
-    min-height: 100vh;
-    position: relative;
+.container{
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
 }
 
-.contact_list{
-    min-width: 300px;
-
-}
-
-.contact_container{
-    height: 50px;
-}
-
-.input{
-    min-height: 40px;
-    margin-bottom: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    outline: none;
-    min-width: 300px;
-    max-width: 300px;
-    border-radius: 3px;
-    font-size: 17px;
-    color: rgba(0, 0, 0, 0.6);
-    padding-left: 6px;
-    cursor: auto;
-}
-
-.chat_container{
-    width: 100%;
-    height: 100%;
-    height: 85vh;
-    margin-left: 20px;
-}
-
-.chat_header{
-    width: 100%;
-    height: 60px;
-    border-radius: 20px 20px 0 0;
-    border: 1px solid #B5B5B5;
-}
-
-.chat_area{
-    height: 100%;
-    width: 100%;
-    border-radius: 0 0 10px 10px;
-    border: 1px solid #B5B5B5;
+.main{
+    min-height: calc(100vh - 180px);
 }
